--- a/src/main/resources/templates/user/all.html
+++ b/src/main/resources/templates/user/all.html
@@ -45,7 +45,7 @@
             <i class="far fa-clock ms-2 me-1"></i>18:08:33
           </td>
           <td class="text-right">20.000<sup>đ</sup></td>
-          <td class="color-success text-right">Hoàn thành</td>
+          <td class="text-success text-right">Hoàn thành</td>
           <td class="text-right">
             <a href="javascript:void(0)" class="text-info mr-2" data-bs-toggle="modal" data-bs-target="#reportOrderContentModal">
               <i class="far fa-comment-dots" data-bs-placement="top" data-bs-toggle="tooltip" title="Lý do từ chối"></i>
