commit show list club info

--- a/src/main/resources/templates/common/sidebar.html
+++ b/src/main/resources/templates/common/sidebar.html
@@ -31,7 +31,7 @@
       <i class="fas fa-angle-right float-right mt-1 font-arrow toggle-hide"></i>
     </a>
     <div class="dropdown-menu" aria-labelledby="fptuDropdown">
-      <a class="dropdown-item" href=""><i class="fas fa-user-friends fa-fw mr-2"></i>Câu lạc bộ</a>
+      <a class="dropdown-item" th:href="@{/club/all}"><i class="fas fa-user-friends fa-fw mr-2"></i>Câu lạc bộ</a>
     </div>
   </li>
   <li class="nav-item dropdown">
