--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,6 +34,9 @@
         <th:block th:if="${page == 2}">
           <div th:replace="user/all :: all"></div>
         </th:block>
+        <th:block th:if="${page == 3}">
+          <div th:replace="fptu/club :: club"></div>
+        </th:block>
       </div>
     </div>
   </div>
