--- a/src/main/resources/static/css/datatable/table.css
+++ b/src/main/resources/static/css/datatable/table.css
@@ -86,6 +86,14 @@
   float: right;
 }
 
+#club-table_filter {
+  float: right;
+}
+
+#recruitment-table_filter {
+  float: right;
+}
+
 .datatable label {
   display: inline-block;
   max-width: 100%;
