--- a/src/main/resources/templates/fptu/club.html
+++ b/src/main/resources/templates/fptu/club.html
@@ -38,14 +38,24 @@
               <span th:text="${clubType.fptuClubTypeName}"></span>
             </th:block>
           </td>
-          <td><span th:text="*{club.fptuClubDescription}"></span></td>
+          <td>
+            <a href="javascript:void(0)" class="text-info" onclick="showContent(event)">
+              <span class="d-none" th:text="*{club.fptuClubDescription}"></span>
+              Chi tiết
+            </a>
+          </td>
           <td><span th:text="*{club.fptuClubFanpageName}"></span></td>
           <td><span th:text="*{club.fptuClubFanpage}"></span></td>
           <td><span th:text="*{club.fptuClubMemberQuantity}"></span></td>
           <td><span th:text="*{club.fptuClubContactName}"></span></td>
           <td><span th:text="*{club.fptuClubContactEmail}"></span></td>
           <td><span th:text="*{club.fptuClubContactPhoneNumber}"></span></td>
-          <td><span th:text="*{club.fptuClubAchievements}"></span></td>
+          <td>
+            <a href="javascript:void(0)" class="text-info" onclick="showContent(event)">
+              <span class="d-none" th:text="*{club.fptuClubAchievements}"></span>
+              Chi tiết
+            </a>
+          </td>
           <td class="text-right">
             <a href="javascript:void(0)" class="text-info" data-bs-toggle="modal" data-bs-target="#reasonRejectionOrderModal">
               <i class="far fa-comment-dots" data-bs-placement="top" data-bs-toggle="tooltip" title="Lý do từ chối"></i>
