update show find job

--- a/src/main/resources/static/css/datatable/table.css
+++ b/src/main/resources/static/css/datatable/table.css
@@ -94,6 +94,10 @@
   float: right;
 }
 
+#find-job-table_filter {
+  float: right;
+}
+
 .datatable label {
   display: inline-block;
   max-width: 100%;
