--- a/src/main/resources/templates/common/sidebar.html
+++ b/src/main/resources/templates/common/sidebar.html
@@ -41,7 +41,7 @@
       <i class="fas fa-angle-right float-right mt-1 font-arrow toggle-hide"></i>
     </a>
     <div class="dropdown-menu" aria-labelledby="workDropdown">
-      <a class="dropdown-item" href=""><i class="fas fa-list-ul fa-fw mr-2"></i>Tìm việc làm</a>
+      <a class="dropdown-item" th:href="@{/work/find-job}"><i class="fas fa-list-ul fa-fw mr-2"></i>Tìm việc làm</a>
       <a class="dropdown-item" th:href="@{/work/recruitment}"><i class="fas fa-search fa-fw mr-2"></i>Tuyển người làm</a>
     </div>
   </li>
