--- a/src/main/resources/templates/work/recruitment.html
+++ b/src/main/resources/templates/work/recruitment.html
@@ -91,7 +91,7 @@
             <th:block th:if="*{work.workRequestRecruitmentNote != null}">
               <a href="javascript:void(0)" class="text-info">
                 <i class="far fa-comment-dots" data-bs-placement="top" data-bs-toggle="tooltip" title="Lý do từ chối"
-                   onclick="showRecruitmentReasonReject(event)">
+                   onclick="showContent(event)">
                   <span class="d-none" th:text="*{work.workRequestRecruitmentNote}"></span>
                 </i>
               </a>
