commit delete club

--- a/src/main/resources/templates/common/modal/modal-show-content.html
+++ b/src/main/resources/templates/common/modal/modal-show-content.html
@@ -1,4 +1,4 @@
-<!-- Modal show recruitment description-->
+<!-- Modal show content-->
 <div class="modal fade" id="showContentModal" tabindex="-1" aria-labelledby="showContentModalLabel"
      aria-hidden="true" th:fragment="showContentModal">
   <div class="modal-dialog modal-dialog-centered modal-description">
