--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,6 +50,7 @@
 
   <th:block>
     <div th:replace="common/modal/modal-show-content :: showContentModal"></div>
+    <div th:replace="common/modal/modal-confirm-delete :: confirmDeleteModal"></div>
   </th:block>
 
   <!-- Scroll to Top Button-->
