--- a/src/main/resources/templates/work/find-job.html
+++ b/src/main/resources/templates/work/find-job.html
@@ -83,6 +83,10 @@
                 </i>
               </a>
             </th:block>
+            <a href="javascript:void(0)" class="color-danger">
+              <i class="far fa-trash-alt">
+              </i>
+            </a>
           </td>
         </tr>
         </tbody>
