--- a/src/main/resources/templates/work/find-job.html
+++ b/src/main/resources/templates/work/find-job.html
@@ -84,7 +84,8 @@
               </a>
             </th:block>
             <a href="javascript:void(0)" class="color-danger">
-              <i class="far fa-trash-alt">
+              <i class="far fa-trash-alt" onclick="confirmDeleteFindJob(event)">
+                <span class="d-none" th:text="*{worker.workRequestFindJobId}"></span>
               </i>
             </a>
           </td>
