--- a/src/main/resources/templates/work/recruitment.html
+++ b/src/main/resources/templates/work/recruitment.html
@@ -79,13 +79,24 @@
           <td><span th:text="*{work.workRequestRecruitmentQuantity}"></span></td>
           <td><span th:text="*{work.workRequestRecruitmentExperienceRequirement ? 'Có' : 'Không'}"></span></td>
           <td><span th:text="*{work.workRequestRecruitmentGenderRequirement ? 'Có' : 'Không'}"></span></td>
-          <td><span th:text="*{work.workRequestRecruitmentWorkLocation}"></span></td>
-          <td><span th:text="*{work.workRequestRecruitmentStartDateTime}"></span></td>
-          <td><span th:text="*{work.workRequestRecruitmentEndDateTime}"></span></td>
           <td>
-            <th:block th:with="sttWork=${sttWorkService.getOneByCode(work.sttWorkCode)}">
-              <span th:text="${sttWork.sttWorkValue}"></span>
-            </th:block>
+            <a href="javascript:void(0)" class="text-info" onclick="showContent(event)">
+              <span class="d-none" th:text="*{work.workRequestRecruitmentWorkLocation}"></span>
+              Chi tiết
+            </a>
+          </td>
+          <td><span th:text="*{#dates.format(work.workRequestRecruitmentStartDateTime, 'dd-MM-yyyy')}"></span></td>
+          <td><span th:text="*{#dates.format(work.workRequestRecruitmentEndDateTime, 'dd-MM-yyyy')}"></span></td>
+          <td>
+            <span th:classappend="*{work.sttWorkCode == 1 ? 'text-info'
+            : (work.sttWorkCode == 2 ? 'text-secondary'
+            : (work.sttWorkCode == 3 ? 'text-warning'
+            : (work.sttWorkCode == 4 ? 'color-success' : 'text-danger')))}"
+                  th:text="*{work.sttWorkCode == 1 ? 'Đang chờ duyệt'
+            : (work.sttWorkCode == 2 ? 'Từ chối duyệt'
+            : (work.sttWorkCode == 3 ? 'Đã duyệt'
+            : (work.sttWorkCode == 4 ? 'Hoàn thành' : 'Hết hạn')))}">
+            </span>
           </td>
           <td class="text-right">
             <th:block th:if="*{work.workRequestRecruitmentNote != null}">
