user & food (show & delete)

--- a/src/main/resources/static/css/datatable/table.css
+++ b/src/main/resources/static/css/datatable/table.css
@@ -86,6 +86,10 @@
   float: right;
 }
 
+#online-store-table_filter {
+  float: right;
+}
+
 .datatable label {
   display: inline-block;
   max-width: 100%;
