commit show traffic and delete traffic

--- a/src/main/resources/static/css/datatable/table.css
+++ b/src/main/resources/static/css/datatable/table.css
@@ -98,6 +98,14 @@
   float: right;
 }
 
+#bus-table_filter {
+  float: right;
+}
+
+#motorbike-table_filter {
+  float: right;
+}
+
 .datatable label {
   display: inline-block;
   max-width: 100%;
