--- a/src/main/resources/templates/common/sidebar.html
+++ b/src/main/resources/templates/common/sidebar.html
@@ -62,8 +62,8 @@
       <i class="fas fa-angle-right float-right mt-1 font-arrow toggle-hide"></i>
     </a>
     <div class="dropdown-menu" aria-labelledby="trafficDropdown">
-      <a class="dropdown-item" href=""><i class="fas fa-bus-alt fa-fw mr-2"></i>Xe bus</a>
-      <a class="dropdown-item" href=""><i class="fas fas fa-motorcycle fa-fw mr-2"></i>Xe ôm</a>
+      <a class="dropdown-item" th:href="@{/bus}"><i class="fas fa-bus-alt fa-fw mr-2"></i>Xe bus</a>
+      <a class="dropdown-item" th:href="@{/motorbike-taxi-drivers}"><i class="fas fas fa-motorcycle fa-fw mr-2"></i>Xe ôm</a>
     </div>
   </li>
   <li class="nav-item">
