--- a/src/main/resources/templates/traffic/bus.html
+++ b/src/main/resources/templates/traffic/bus.html
@@ -15,11 +15,10 @@
         <tr>
           <th class="text-center">#</th>
           <th>Xe số<i class="fas fa-sort fa-size"></i></th>
-          <th>Thời gian bắt đầu<i class="fas fa-sort fa-size"></i></th>
-          <th>Thời gian kết thúc<i class="fas fa-sort fa-size"></i></th>
-          <th>Thông tin<i class="fas fa-sort fa-size"></i></th>
-          <th>Giá<i class="fas fa-sort fa-size"></i></th>
-          <th>Điểm dừng<i class="fas fa-sort fa-size"></i></th>
+          <th class="text-center">Thời gian chạy<i class="fas fa-sort fa-size"></i></th>
+          <th class="text-center">Thông tin<i class="fas fa-sort fa-size"></i></th>
+          <th class="text-center">Giá<i class="fas fa-sort fa-size"></i></th>
+          <th class="text-center">Điểm dừng<i class="fas fa-sort fa-size"></i></th>
           <th>Trạng thái<i class="fas fa-sort fa-size"></i></th>
           <th>Thêm<i class="fas fa-sort fa-size"></i></th>
         </tr>
@@ -28,11 +27,15 @@
         <tr th:each = "bus, stt : ${busList}">
           <td class="text-center"><span th:text="*{stt.index + 1}"></span></td>
           <td><span th:text="*{bus.tfBusName}"></span></td>
-          <td><span th:text="*{bus.tfBusStartTime}"></span></td>
-          <td><span th:text="*{bus.tfBusEndTime}"></span></td>
-          <td><span th:text="*{bus.tfBusInfo}"></span></td>
-          <td><span th:text="*{bus.tfBusPrice}"></span></td>
-          <td>
+          <td class="text-center"><span th:text="*{bus.tfBusStartTime} + ' - ' + *{bus.tfBusEndTime}"></span></td>
+          <td class="text-center">
+            <a href="javascript:void(0)" class="text-info" onclick="showContent(event)">
+              <span class="d-none" th:text="*{bus.tfBusInfo}"></span>
+              Chi tiết
+            </a>
+          </td>
+          <td class="text-center"><span th:text="*{#numbers.formatInteger(bus.tfBusPrice, 3, 'POINT')}"></span><sup>đ</sup></td>
+          <td class="text-center">
             <a th:href="@{/bus/stop(busId=*{bus.tfBusId})}" class="text-info">
               Chi tiết
             </a>
