--- a/src/main/resources/templates/work/find-job.html
+++ b/src/main/resources/templates/work/find-job.html
@@ -14,15 +14,7 @@
         <thead>
         <tr>
           <th class="text-center">#</th>
-          <th>Tài khoản đăng<i class="fas fa-sort fa-size"></i></th>
           <th>Tiêu đề<i class="fas fa-sort fa-size"></i></th>
-          <th>Miêu tả<i class="fas fa-sort fa-size"></i></th>
-          <th>Hình thức làm việc<i class="fas fa-sort fa-size"></i></th>
-          <th>Kinh nghiệm<i class="fas fa-sort fa-size"></i></th>
-          <th>Mức lương mong muốn<i class="fas fa-sort fa-size"></i></th>
-          <th>Đơn vị tính lương<i class="fas fa-sort fa-size"></i></th>
-          <th>Hình thức thanh toán<i class="fas fa-sort fa-size"></i></th>
-          <th>Địa điểm mong muốn<i class="fas fa-sort fa-size"></i></th>
           <th>Ngày tạo<i class="fas fa-sort fa-size"></i></th>
           <th>Ngày hết hạn<i class="fas fa-sort fa-size"></i></th>
           <th>Trạng thái<i class="fas fa-sort fa-size"></i></th>
@@ -32,41 +24,7 @@
         <tbody>
         <tr th:each = "worker, stt : ${workerList}">
           <td class="text-center"><span th:text="*{stt.index + 1}"></span></td>
-          <td>
-            <th:block th:with="user=${userDetailService.getOneByUserId(worker.userId)}">
-              <span th:text="${user.userDetailEmail}"></span>
-            </th:block>
-          </td>
-          <td><span th:text="*{worker.workRequestFindJobTitle}"></span></td>
-          <td>
-            <a href="javascript:void(0)" class="text-info" onclick="showContent(event)">
-              <span class="d-none" th:text="*{worker.workRequestFindJobDescription}"></span>
-              Chi tiết
-            </a>
-          </td>
-          <td>
-            <th:block th:with="type=${workRequestTypeService.getOne(worker.workRequestTypeId)}">
-              <span th:text="*{type.workRequestTypeName}"></span>
-            </th:block>
-          </td>
-          <td>
-            <a href="javascript:void(0)" class="text-info" onclick="showContent(event)">
-              <span class="d-none" th:text="*{worker.workRequestFindJobPersonalExperience}"></span>
-              Chi tiết
-            </a>
-          </td>
-          <td><span th:text="*{worker.workRequestFindJobExpectedSalary}"></span></td>
-          <td>
-            <th:block th:with="unit=${workSalaryUnitService.getOne(worker.workSalaryUnitId)}">
-              <span th:text="${unit.workSalaryUnitName}"></span>
-            </th:block>
-          </td>
-          <td>
-            <th:block th:with="payment=${workPaymentMethodService.getOne(worker.workPaymentMethodId)}">
-              <span th:text="${payment.workPaymentMethodName}"></span>
-            </th:block>
-          </td>
-          <td><span th:text="*{worker.workRequestFindJobExpectedLocation}"></span></td>
+          <td><span th:text="${format.title(worker.workRequestFindJobTitle, 25)}"></span></td>
           <td><span th:text="*{#dates.format(worker.workRequestFindJobStartDateTime, 'dd-MM-yyyy')}"></span></td>
           <td><span th:text="*{#dates.format(worker.workRequestFindJobEndDateTime, 'dd-MM-yyyy')}"></span></td>
           <td>
@@ -89,6 +47,9 @@
                 </i>
               </a>
             </th:block>
+            <a th:href="@{/work/find-job/detail(findJobId=*{worker.workRequestFindJobId})}">
+              <i class="fas fa-eye text-warning"></i>
+            </a>
             <a href="javascript:void(0)" class="color-danger">
               <i class="far fa-trash-alt" onclick="confirmDeleteFindJob(event)">
                 <span class="d-none" th:text="*{worker.workRequestFindJobId}"></span>
